--- a/app/public/index.html
+++ b/app/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Flask React App</title>
+    <title>%REACT_APP_SITE_TITLE%</title>
   </head>
   <body>
     <noscript>
